# Flint-Ai

./: .gitignore  Dockerfile  README.md  render.yaml
backend/: .env.example  .gitignore  API_DOCS_INDEX.md  MIGRATION_GUIDE.md  README.md  Security_Architecture_Review.md  app_server.py  folder_structure.txt  pyproject.toml  schema.sql
backend/coral/: setup_coral.ps1  supabase-source.yaml
backend/k8s/: backlog-pod.yaml  stress-pod.yaml  worker-deployment.yaml
backend/src/: main.py  worker.py
backend/src/agents/: billing_agent.py
backend/src/auth/: dependencies.py
backend/src/database/: postgres.py
backend/src/services/: a.txt  anomaly.py  autopilot.py  autopilot_routes.py  aws.py  gcp.py  investigator.py  k8s.py  optimizer.py  seed_data.py
coral-ai/: README.md  index.html  metadata.json  server.ts
coral-ai/src/: App.tsx  index.css  types.ts
coral-ai/src/components/: AuthScreen.tsx  ExplorerWorkspace.tsx  NodesWorkspace.tsx  OverviewWorkspace.tsx  ShieldWorkspace.tsx  Sidebar.tsx  TopBar.tsx  VaultWorkspace.tsx
landing_page/: .cta.json  .dockerignore  .env.example  Dockerfile  package-lock.json  render_build.sh  server.ts  vite.config.ts
landing_page/src/: App.tsx  types.ts
landing_page/src/components/: AuthScreen.tsx  CopilotWorkspace.tsx  ExplorerWorkspace.tsx  Footer.tsx  NodesWorkspace.tsx  OverviewWorkspace.tsx  ShieldWorkspace.tsx  Sidebar.tsx  TopBar.tsx  VaultWorkspace.tsx
myapp/: .gitignore  app.json  design.md  global.css  metro.config.js  package-lock.json  package.json
myapp/components/: themed-text.tsx
myapp/constants/: theme.ts
(+8 files in other folders)
